# graphing-calculator

./: README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  webpack.config copy.js  webpack.config.js
backend/: Cargo.toml  README.md
backend/src/: expression_parser.rs  grammar.pest  lib.rs  tracer.rs
src/: App.svelte  App.ts  Controller.ts  Graph.ts  GraphController.ts  Grid.ts  ImplicitFunctionTracer.ts  IntervalQuadTreeTracer.ts  IntervalSelection.ts  Math.ts  QuadTreeBisectionTracer.ts  QuadTreeNewtonTracer.ts  QuadTreeTracer.ts  Renderer.ts  Timer.ts  ZoomPan.ts  app.css  custom.d.ts  index.ts  index.tsx  utils.ts  vite-env.d.ts  worker.ts
src/components/: About.svelte  Graph.svelte  Graph.tsx  Home.svelte  Layout.svelte  Layout.tsx  Menu.svelte  Menu.tsx  PerformanceDisplay.svelte
src/gl-helpers/: Shader.ts  VertexArray.ts  WebGLw.ts
src/interval-arithmetic/: Interval.ts  cInterval.ts
src/shaders/: grid-fragment.glsl  grid-vertex.glsl
static/: index.css  index.html
